k8s/mf1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mf1-nextjs-service
  labels:
    app: mf1-nextjs
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: mf1-nextjs
