k8s/mf2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mf2-vue-service
  labels:
    app: mf2-vue
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: mf2-vue
